sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but 'if' found.
				if(plusPetit(k+1,k)){
                                ^